Startup Package Cleanup

--- a/index.html
+++ b/index.html
@@ -359,74 +359,34 @@
 				<!-- the tabs -->
 				<ul class="css-tabs">
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/fire.svg"><span>
-							<br>
-							Incubation
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/fire.svg"><br><span> Incubation Services</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/drawer.svg"><span>
-							<br>
-							Intellectual
-							<br>
-							Property</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/drawer.svg"><br><span>Intellectual Property</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/corporate.svg"><span>
-							<br>
-							Corporate
-							<br>
-							Legal</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/corporate.svg"><br><span>Corporate Legal</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/calculate.svg"><span>
-							<br>
-							Accounting
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/calculate.svg"><br><span>Accounting Services</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/library.svg"><span>
-							<br>
-							Banking
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/library.svg"><br><span>Banking Services</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/lab.svg"><span>
-							<br>
-							Laboratory
-							<br>
-							Space</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/lab.svg"><br><span>Laboratory Space</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/coin.svg"><span>
-							<br>
-							Grant
-							<br>
-							Consulting</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/coin.svg"><br><span>Grant Consulting</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/bullhorn.svg"><span>
-							<br>
-							PR
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/bullhorn.svg"><br><span>Public Relations</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/screen.svg"><span>
-							<br>
-							IT
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/screen.svg"><br><span>IT/Web Services</span></a>
 					</li>
 					<li>
-						<a href="javascript:"><img src="/incubator/images/icons/user.svg"><span>
-							<br>
-							Admin
-							<br>
-							&nbsp;</span></a>
+						<a href="javascript:"><img src="/incubator/images/icons/user.svg"><br><span>Admin Services</span></a>
 					</li>
 				</ul>
 			</div>
