Added EIR, centered package partners

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<a href="javascript:"> <img class="people gray" src="/incubator/images/ken-malone.png"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people gray" src="http://placehold.it/150&text=BD"/></a>
+					<a href="javascript:"> <img class="people gray" src="/incubator/images/rich-moore.jpg"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
 					<a href="javascript:"> <img class="people gray" src="http://placehold.it/150&text=CFLD"/></a>
@@ -393,34 +393,36 @@
 
 			<div class="row">
 				<div class="css-panes">
-					<div class="p4">
+					<div class="p4 content">
+						<p>
 						<a href="javascript:"> <img class="provider" src="images/logos/bhi-logo.png"/></a>
 						<a href="javascript:"> <img class="provider" src="images/logos/bin-logo.png"/></a>
+						</p>
 					</div>
-					<div class="p5">
-						<a href="javascript:"> <img class="provider" src="images/logos/ms-logo.png"/></a>
-						<a href="javascript:"> <img class="provider" src="images/logos/ip-council-logo.png"/></a>
+					<div class="p5 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/ms-logo.png"/></a>
+						<a href="javascript:"> <img class="provider" src="images/logos/ip-council-logo.png"/></a></p>
 					</div>
-					<div class="p5">
-						<a href="javascript:"> <img class="provider" src="images/logos/ven-logo.png"/></a>
+					<div class="p5 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/ven-logo.png"/></a></p>
 					</div>
-					<div class="p6">
-						<a href="javascript:"> <img class="provider" src="images/logos/aronson-logo.png"/></a>
+					<div class="p6 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/aronson-logo.png"/></a></p>
 					</div>
-					<div class="p7">
-						<a href="javascript:"> <img class="provider" src="images/logos/mtb-logo.png"/></a>
+					<div class="p7 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/mtb-logo.png"/></a></p>
 					</div>
-					<div class="p8">
-						<a href="javascript:"> <img class="provider" src="images/logos/biop-logo.png"/></a>
-						<a href="javascript:"> <img class="provider" src="images/logos/bri-logo.png"/></a>
+					<div class="p8 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/biop-logo.png"/></a>
+						<a href="javascript:"> <img class="provider" src="images/logos/bri-logo.png"/></a></p>
 					</div>
-					<div class="p9">
-						<a href="javascript:"> <img class="provider" src="images/logos/bbc-logo.png"/></a>
-						<a href="javascript:"> <img class="provider" src="images/logos/ss-logo.png"/></a>
+					<div class="p9 content">
+						<p><a href="javascript:"> <img class="provider" src="images/logos/bbc-logo.png"/></a>
+						<a href="javascript:"> <img class="provider" src="images/logos/ss-logo.png"/></a></p>
 					</div>
-					<div class="p1"></div>
-					<div class="p2"></div>
-					<div class="p3"></div>
+					<div class="p1 content"></div>
+					<div class="p2 content"></div>
+					<div class="p3 content"></div>
 				</div>
 			</div>
 
