Small contact edit

--- a/index.html
+++ b/index.html
@@ -293,11 +293,10 @@
 				</div>
 				<div class="col-md-5 description-text">
 					<p>
-						Application form coming soon.
 						<br><br>
 						<img src="images/icons/envelope.svg" />
 						<br><br>
-						For questions and comments email Ethan Byler at <a href="mailto:ebyler@biohealthinnovation.org">ebyler@biohealthinnovation.org</a>
+						For questions, comments, and to receive an application form, please email Ethan Byler at <a href="mailto:ebyler@biohealthinnovation.org">ebyler@biohealthinnovation.org</a>
 					</p>
 				</div>
 				<!--
@@ -356,12 +355,14 @@
 	<script src="js/bootstrap.min.js"></script>
 
 	<script type="text/javascript">
+		//Startup tabs
 		$(function() {
 			$("#css-tab-switch").tabs(".css-panes > div");
 		});
 	</script>
 
 	<script type="text/javascript">
+		//Map expand button
 		var map = $('#map-canvas');
 		$('#resize-map-button').click(function() {
 			//Check if map is already expanded
