--- a/startup-package.html
+++ b/startup-package.html
@@ -34,7 +34,7 @@
 						Venable
 					</div>
 					<div class="company-description">
-						With more than 600 attorneys in nine offices across the country, Venable is focused on all areas of corporate and business law, complex litigation, intellectual property, and regulatory and government affairs. Proud Strategic Partner of BHI
+						With more than 600 attorneys in nine offices across the country, Venable is focused on all areas of corporate and business law, complex litigation, intellectual property, and regulatory and government affairs. Venable is a proud strategic partner of BHI.
 					</div></td>
 					<td class="right"><img src="/incubator/startup-images/ven-logo.jpg"></td>
 				</tr>
@@ -49,7 +49,7 @@
 						M&amp;T Bank
 					</div>
 					<div class="company-description">
-						M&amp;T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. Bank of Choice BHI Clients
+						M&amp;T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. M&amp;T is the bank of choice of BHI.
 					</div></td>
 					<td class="right"><img src="/incubator/startup-images/mt-logo.jpg"></td>
 				</tr>
@@ -108,7 +108,7 @@
 						The Science Sherpa offers a combination of services and programs to help researchers, technology companies, colleges, universities, medical schools, and hospitals win grants and contracts and reduce the stress and pressure of grant and proposal preparation.
 					</div>
 					<div class="company-name">
-						Biotechnology Business Consultants
+						BBCetc
 					</div>
 					<div class="company-description">
 						BBC Entrepreneurial Training &amp; Consulting, LLC (BBCetc)  works with technology-based entrepreneurs on strategies to advance R&D efforts to commercialization. In particular, the BBCetc team is nationally recognized for its success in helping clients secure federal funding through the Federal Small Business Innovation Research (SBIR) and Small Business Technology Transfer (STTR) programs.  BBCetc services include commercialization planning, research grant assistance, SBIR/STTR training and proposal development assistance, and grants and contract management.
