--- a/startup-package.html
+++ b/startup-package.html
@@ -92,7 +92,7 @@
 						burden of hiring a full-time attorney.  We are a proud partner of BHI’s Startup Package for client companies.
 					</div></td>
 
-					<td class="right"><img src="/incubator/startup-images/ms-logo.jpg"><img src="http://placehold.it/200x50"></td>
+					<td class="right"><img src="/incubator/startup-images/ms-logo.jpg"><img src="/incubator/startup-images/ipc-logo.png"></td>
 				</tr>
 
 				<tr>
