--- a/startup-package.html
+++ b/startup-package.html
@@ -49,7 +49,7 @@
 						M&amp;T Bank
 					</div>
 					<div class="company-description">
-						M&amp;T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. M&amp;T is the bank of choice of BHI.
+						M&amp;T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&amp;T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. M&amp;T is the bank of choice of BHI.
 					</div></td>
 					<td class="right"><img src="/incubator/startup-images/mt-logo.jpg"></td>
 				</tr>
@@ -73,7 +73,7 @@
 					<td rowspan="1" class="left"><img src="/incubator/startup-images/ip-icon.png"></td>
 					<td class="middle">
 					<div class="section-header">
-						Intellectual Property Legal Services
+						Intellectual Property Legal Services
 					</div>
 					<div class="company-name">
 						Miles &amp; Stockbridge
