--- a/startup-package.html
+++ b/startup-package.html
@@ -36,7 +36,7 @@
 					<div class="company-description">
 						With more than 600 attorneys in nine offices across the country, Venable is focused on all areas of corporate and business law, complex litigation, intellectual property, and regulatory and government affairs. Venable is a proud strategic partner of BHI.
 					</div></td>
-					<td class="right"><img src="/incubator/startup-images/ven-logo.jpg"></td>
+					<td class="right"><img src="/incubator/startup-images/ven-logo.png"></td>
 				</tr>
 
 				<tr>
@@ -51,7 +51,7 @@
 					<div class="company-description">
 						M&amp;T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&amp;T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. M&amp;T is the bank of choice of BHI.
 					</div></td>
-					<td class="right"><img src="/incubator/startup-images/mt-logo.jpg"></td>
+					<td class="right"><img src="/incubator/startup-images/mt-logo.png"></td>
 				</tr>
 
 				<tr>
@@ -66,7 +66,7 @@
 					<div class="company-description">
 						Aronson LLC has been thinking ahead for its clients for more than 50 years. As business advisors to today's most active industry sectors, Aronson's experts provide innovative audit, tax, and consulting services that help clients rethink the way they do business. Dedicated to vision, integrity and excellent client service, Aronson's CPAs, tax professionals and consultants help BHI client companies navigate complex financial matters.
 					</div></td>
-					<td class="right"><img src="/incubator/startup-images/arr-logo.jpg"></td>
+					<td class="right"><img src="/incubator/startup-images/arr-logo.png"></td>
 				</tr>
 
 				<tr>
@@ -92,7 +92,7 @@
 						burden of hiring a full-time attorney.  We are a proud partner of BHI’s Startup Package for client companies.
 					</div></td>
 
-					<td class="right"><img src="/incubator/startup-images/ms-logo.jpg"><img src="/incubator/startup-images/ipc-logo.png"></td>
+					<td class="right"><img src="/incubator/startup-images/ms-logo.png"><img src="/incubator/startup-images/ipc-logo.png"></td>
 				</tr>
 
 				<tr>
@@ -113,7 +113,7 @@
 					<div class="company-description">
 						BBC Entrepreneurial Training &amp; Consulting, LLC (BBCetc)  works with technology-based entrepreneurs on strategies to advance R&amp;D efforts to commercialization. In particular, the BBCetc team is nationally recognized for its success in helping clients secure federal funding through the Federal Small Business Innovation Research (SBIR) and Small Business Technology Transfer (STTR) programs.  BBCetc services include commercialization planning, research grant assistance, SBIR/STTR training and proposal development assistance, and grants and contract management.
 					</div>
-					<td class="right"><img src="/incubator/startup-images/science-sherpa-logo.PNG"><img src="/incubator/startup-images/bbc-logo.PNG"></td>
+					<td class="right"><img src="/incubator/startup-images/science-sherpa-logo.png"><img src="/incubator/startup-images/bbc-logo.png"></td>
 				</tr>
 
 			</table>
