--- a/startup-package.html
+++ b/startup-package.html
@@ -113,7 +113,7 @@
 					<div class="company-description">
 						BBC Entrepreneurial Training &amp; Consulting, LLC (BBCetc)  works with technology-based entrepreneurs on strategies to advance R&amp;D efforts to commercialization. In particular, the BBCetc team is nationally recognized for its success in helping clients secure federal funding through the Federal Small Business Innovation Research (SBIR) and Small Business Technology Transfer (STTR) programs.  BBCetc services include commercialization planning, research grant assistance, SBIR/STTR training and proposal development assistance, and grants and contract management.
 					</div>
-					<td class="right"><img src="/incubator/startup-images/science-sherpa-logo.png"><img src="/incubator/startup-images/bbc-logo.png"></td>
+					<td class="right"><img src="/incubator/startup-images/science-sherpa-logo.PNG"><img src="/incubator/startup-images/bbc-logo.PNG"></td>
 				</tr>
 
 			</table>
